# filebundler

./: pyproject.toml  readme.md  requirements.txt
.github/workflows/: wf.yml
filebundler/: app.py  package.sh
filebundler/configs/: conf.py
filebundler/elements/: loadable_element.py  node_element.py  node_widget.py  types.py
filebundler/filesystem/: fsnode.py  out_files.py
filebundler/layouts/: dialogue.py  finish.py  selection.py
filebundler/resources/: interval.py  provider.py
filebundler/run/: dev_run.py  prod_run.py
tests/: t_example.py  t_interval.py  t_run.py
