[project]
name = "databundler"
version = "0.1.0"
authors = [{name = "Daniel Hollarek", email = "daniel.hollarek@googlemail.com"}]
dependencies = ["Kivy","screeninfo", "pillow"]

[project.optional-dependencies]
test = ["holytools"]

[tool.setuptools.packages.find]
include = ["filebundler*"]

[tool.setuptools.package-data]
"filebundler.resources" = ["*", '*/*', '*/*/*']


